--- a/public/assets/css/modal.css
+++ b/public/assets/css/modal.css
@@ -67,20 +67,21 @@
     
   }
   .close-btn {
-    margin-top: 20px;
-    padding: 10px 18px;
-    background-color: #e60000;
+    
+   padding: 10px 13px;
+    background-color: #e60000a1;
     color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 50%;
     cursor: pointer;
-    font-size: 16px;
+  
   
     
   }
   
   .close-btn:hover {
-    background-color: #e60000;
+    background-color: #990909;
+   
   }
   
   .show-modal {
